# gha-coq-demo-docker-coq-action

./: LICENSE  coq-demo.opam
.github/workflows/: gha-demo-coq-action.yml
src/: demo.v
tests/: test_demo.v
