opam-version: "2.0"
maintainer: "erik@martin-dorel.org"
version: "dev"

homepage: "https://github.com/erikmd/gha-coq-demo-docker-coq-action"
dev-repo: "git+https://github.com/erikmd/gha-coq-demo-docker-coq-action.git"
bug-reports: "https://github.com/erikmd/gha-coq-demo-docker-coq-action/issues"
license: "MIT"

synopsis: "GHA Demo"
description: """
Demo using GHA.
"""

build: [
  ["sh" "-c" "coq_makefile -f _CoqProject -o Makefile"]
  [make "-j%{jobs}%"]
]
install: [make "install"]

run-test: [make "test"]

depends: [
  "ocaml" {>= "4.05.0"}
  "coq" {(>= "8.6") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.7.0")}
]

tags: [
]
authors: [
  "Erik Martin-Dorel"
]
